1998-12-18  John R. Jackson  <jrj@purdue.edu>

	* server-src/driver.c: call short_dump_state() one last time before
	quitting so amstatus gets a last good status.  Tell taper to quit
	after the dumpers since it writes more information to the amdump
	file (helps prevent mixed messages).

1998-12-17  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* common-src/Makefile.am (noinst_DATA): removed; bogus
	* config/config.guess, config/config.sub: config/install-sh,
	config/mkinstalldirs: updated to current pre-2.13 autoconf CVS tree
	* patches/autoreconf.patch: removed
	* config/libtool/libtool.m4: renamed to config/libtool.m4i
	* config/acinclude.m4: renamed to config/acinclude.m4i
	* config/Makefile.am (EXTRA_DIST): updated to reflect changes
	* autogen: build config/acinclude.m4  by concatenating acinclude.m4i
	and libtool.m4i
	* configure.in: no longer test whether libtool is installed; require 
	newer autoconf
	* config/ltconfig, config/ltmain.sh, config/libtool.m4i: updated to
	libtool 1.2d
	* amplot/Makefile.am (EXTRA_DIST): no longer needed
	* changer-src/Makefile.am (chg_scsi_SOURCE): move scsi-defs.h closer 
	to the beginning of the list
	* docs/INSTALL: fixed URL to gnuplot; recommend autoconf and
	automake from CVS

1998-12-14  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* configure.in (BSD SCSI): test ... -a ... is not portable, and less 
	so when written test ... -a test ... :-)

1998-12-14  Thomas Hepper <th@icem.de>

	* changer-src/Makefile.am Added scsi-bsd.c
	* changer-src/chg-scsi.c Initialize *scsitapedevice
	* changer-src/scsi-changer-driver.c remove LITTLE_ENDIAN_BITFILEDS
	defenition
	changed RequestSense to pRequestSense (there is a function 
	called RequestSense)
	changed error handling in ResetStatus (fix for IRIX)
	FIxed length handling for the pages in ReadElemtStatus
	* changer-src/scsi-chio.c get_clean_state only returns 0, the
	ioctl to get the clean flag is not portable ;-(
	changed all (f)printf to dbprintf
